fixed cors error and update swagger base url
